--- a/Lab_1/Refactored/authorization.ui
+++ b/Lab_1/Refactored/authorization.ui
@@ -70,7 +70,7 @@
         <layout class="QGridLayout" name="gridLayout_3"/>
        </item>
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="labelScore">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -86,7 +86,6 @@
          <property name="font">
           <font>
            <pointsize>16</pointsize>
-           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -111,7 +110,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="pushButton_newGame">
        <property name="minimumSize">
         <size>
          <width>40</width>
@@ -137,7 +136,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="pushButton_continue">
        <property name="minimumSize">
         <size>
          <width>40</width>
@@ -163,7 +162,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="pushButton_exit">
        <property name="minimumSize">
         <size>
          <width>40</width>
@@ -197,7 +196,7 @@
      <x>0</x>
      <y>0</y>
      <width>550</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
