Rename Menu1 elements

--- a/Lab_1/Refactored/menu1.ui
+++ b/Lab_1/Refactored/menu1.ui
@@ -36,21 +36,21 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pushButton_levels">
       <property name="text">
        <string>levels</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="pushButton_forPleasure">
       <property name="text">
        <string>for pleasure</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="pushButton_exit">
       <property name="text">
        <string>exit</string>
       </property>
