--- a/Lab_1/Refactored/puzzle.ui
+++ b/Lab_1/Refactored/puzzle.ui
@@ -34,7 +34,7 @@
      <height>181</height>
     </rect>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout_puzzle">
     <property name="sizeConstraint">
      <enum>QLayout::SetFixedSize</enum>
     </property>
@@ -49,7 +49,7 @@
      <height>121</height>
     </rect>
    </property>
-   <layout class="QGridLayout" name="gridLayout_3">
+   <layout class="QGridLayout" name="gridLayout_picture">
     <property name="sizeConstraint">
      <enum>QLayout::SetFixedSize</enum>
     </property>
@@ -94,7 +94,7 @@
     <string>exit</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="label_congratulations">
    <property name="geometry">
     <rect>
      <x>460</x>
