--- a/Lab_1/Refactored/settings.ui
+++ b/Lab_1/Refactored/settings.ui
@@ -36,12 +36,12 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QHBoxLayout" name="horizontalLayout_score">
       <item>
-       <layout class="QGridLayout" name="gridLayout_2"/>
+       <layout class="QGridLayout" name="gridLayout_star"/>
       </item>
       <item>
-       <widget class="QLabel" name="labelScore">
+       <widget class="QLabel" name="label_score">
         <property name="text">
          <string/>
         </property>
