--- a/Lab_1/Refactored/end.ui
+++ b/Lab_1/Refactored/end.ui
@@ -36,10 +36,10 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <layout class="QGridLayout" name="gridLayout"/>
+     <layout class="QGridLayout" name="gridLayout_star"/>
     </item>
     <item>
-     <widget class="QLabel" name="labelScore">
+     <widget class="QLabel" name="label_score">
       <property name="palette">
        <palette>
         <active>
@@ -504,7 +504,7 @@
      <height>171</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout_buttons">
     <item>
      <widget class="QPushButton" name="pushButton_levels">
       <property name="text">
