--- a/Lab_2/Refactored/menu1.ui
+++ b/Lab_2/Refactored/menu1.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>550</height>
+    <width>330</width>
+    <height>210</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>330</width>
+    <height>210</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>330</width>
+    <height>210</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>50</y>
+     <x>30</x>
+     <y>10</y>
      <width>271</width>
      <height>191</height>
     </rect>
@@ -37,22 +37,40 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QPushButton" name="pushButton_levels">
+      <property name="minimumSize">
+       <size>
+        <width>40</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
-       <string>levels</string>
+       <string>Levels</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_forPleasure">
+      <property name="minimumSize">
+       <size>
+        <width>40</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
-       <string>for pleasure</string>
+       <string>For Pleasure</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_exit">
+      <property name="minimumSize">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
       <property name="text">
-       <string>exit</string>
+       <string>EXIT</string>
       </property>
      </widget>
     </item>
