--- a/Lab_2/Refactored/levels.ui
+++ b/Lab_2/Refactored/levels.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>550</height>
+    <width>330</width>
+    <height>380</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>330</width>
+    <height>380</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>330</width>
+    <height>380</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,9 +28,9 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>130</y>
-     <width>271</width>
+     <x>30</x>
+     <y>30</y>
+     <width>276</width>
      <height>321</height>
     </rect>
    </property>
@@ -41,7 +41,7 @@
     <item>
      <widget class="QPushButton" name="pushButton_1Level">
       <property name="text">
-       <string>1 level</string>
+       <string>1 Level</string>
       </property>
      </widget>
     </item>
@@ -50,18 +50,31 @@
       <item>
        <widget class="QPushButton" name="pushButton_1Level1Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>1 Picture</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_1Level2Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>2 Picture</string>
         </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>25</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_2Level">
@@ -69,7 +82,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>2 level</string>
+       <string>2 Level</string>
       </property>
      </widget>
     </item>
@@ -78,18 +91,31 @@
       <item>
        <widget class="QPushButton" name="pushButton_2Level1Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>1 Picture</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_2Level2Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>2 Picture</string>
         </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>25</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_3Level">
@@ -97,7 +123,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>3 level</string>
+       <string>3 Level</string>
       </property>
      </widget>
     </item>
@@ -106,18 +132,31 @@
       <item>
        <widget class="QPushButton" name="pushButton_3Level1Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>1 Picture</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_3Level2Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>2 Picture</string>
         </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_4">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>25</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_4Level">
@@ -125,7 +164,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>4 level</string>
+       <string>4 Level</string>
       </property>
      </widget>
     </item>
@@ -134,18 +173,31 @@
       <item>
        <widget class="QPushButton" name="pushButton_4Level1Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>1 Picture</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_4Level2Sublevel">
         <property name="text">
-         <string>pic</string>
+         <string>2 Picture</string>
         </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_5">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>25</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_5Level">
@@ -153,7 +205,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>5 level</string>
+       <string>5 Level</string>
       </property>
      </widget>
     </item>
@@ -165,7 +217,7 @@
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
-        <height>40</height>
+        <height>70</height>
        </size>
       </property>
      </spacer>
@@ -174,8 +226,14 @@
      <layout class="QHBoxLayout" name="horizontalLayout_pageButtons">
       <item>
        <widget class="QPushButton" name="pushButton_menu">
+        <property name="minimumSize">
+         <size>
+          <width>170</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
-         <string>menu</string>
+         <string>MENU</string>
         </property>
        </widget>
       </item>
@@ -194,8 +252,14 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_exit">
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
-         <string>exit</string>
+         <string>EXIT</string>
         </property>
        </widget>
       </item>
