--- a/Lab_2/Refactored/puzzle.ui
+++ b/Lab_2/Refactored/puzzle.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>1000</height>
+    <width>930</width>
+    <height>780</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1000</width>
-    <height>1000</height>
+    <width>930</width>
+    <height>780</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>10000</width>
-    <height>10000</height>
+    <width>930</width>
+    <height>780</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,10 +28,10 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>220</y>
-     <width>396</width>
-     <height>181</height>
+     <x>250</x>
+     <y>240</y>
+     <width>581</width>
+     <height>511</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_puzzle">
@@ -43,10 +43,10 @@
   <widget class="QWidget" name="gridLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>10</y>
+     <x>40</x>
+     <y>20</y>
      <width>151</width>
-     <height>121</height>
+     <height>141</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_picture">
@@ -58,7 +58,7 @@
   <widget class="QPushButton" name="pushButton_settings">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>780</x>
      <y>30</y>
      <width>121</width>
      <height>41</height>
@@ -71,9 +71,9 @@
   <widget class="QPushButton" name="pushButton_toEnd">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>340</y>
-     <width>93</width>
+     <x>800</x>
+     <y>190</y>
+     <width>101</width>
      <height>28</height>
     </rect>
    </property>
@@ -84,23 +84,23 @@
   <widget class="QPushButton" name="pushButton_exit">
    <property name="geometry">
     <rect>
-     <x>740</x>
-     <y>180</y>
-     <width>93</width>
-     <height>28</height>
+     <x>780</x>
+     <y>80</y>
+     <width>121</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>exit</string>
+    <string>EXIT</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_congratulations">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>20</y>
-     <width>394</width>
-     <height>179</height>
+     <x>280</x>
+     <y>30</y>
+     <width>361</width>
+     <height>111</height>
     </rect>
    </property>
    <property name="font">
@@ -112,13 +112,16 @@
    <property name="text">
     <string>CONGRATULATIONS</string>
    </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
   </widget>
   <widget class="QPushButton" name="pushButton_back">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>270</y>
-     <width>93</width>
+     <x>800</x>
+     <y>130</y>
+     <width>101</width>
      <height>28</height>
     </rect>
    </property>
@@ -129,9 +132,9 @@
   <widget class="QPushButton" name="pushButton_forward">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>310</y>
-     <width>93</width>
+     <x>800</x>
+     <y>160</y>
+     <width>101</width>
      <height>28</height>
     </rect>
    </property>
