--- a/Lab_2/Refactored/forpleasure.ui
+++ b/Lab_2/Refactored/forpleasure.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>550</height>
+    <width>320</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>320</width>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>320</width>
+    <height>500</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,10 +28,10 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>40</y>
+     <x>30</x>
+     <y>30</y>
      <width>261</width>
-     <height>291</height>
+     <height>351</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_puzzleSettings">
@@ -40,7 +40,7 @@
       <item>
        <widget class="QLabel" name="label_puzzleSize">
         <property name="text">
-         <string>the width of puzzle</string>
+         <string>Width of Puzzle</string>
         </property>
        </widget>
       </item>
@@ -58,8 +58,14 @@
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_selectPicture">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
-       <string>choose picture for puzzle</string>
+       <string>Choose Picture for Puzzle</string>
       </property>
      </widget>
     </item>
@@ -68,6 +74,12 @@
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_play">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
        <string>PLAY</string>
       </property>
@@ -78,7 +90,7 @@
       <item>
        <widget class="QLabel" name="label_sort">
         <property name="text">
-         <string>sort:</string>
+         <string>Sort Type:</string>
         </property>
        </widget>
       </item>
@@ -91,8 +103,14 @@
      <layout class="QHBoxLayout" name="horizontalLayout_pageButtons">
       <item>
        <widget class="QPushButton" name="pushButton_menu">
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>40</height>
+         </size>
+        </property>
         <property name="text">
-         <string>menu</string>
+         <string>MENU</string>
         </property>
        </widget>
       </item>
@@ -111,8 +129,14 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_exit">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>40</height>
+         </size>
+        </property>
         <property name="text">
-         <string>exit</string>
+         <string>EXIT</string>
         </property>
        </widget>
       </item>
@@ -123,10 +147,10 @@
   <widget class="QTextBrowser" name="textBrowser_aboutSorting">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>350</y>
-     <width>256</width>
-     <height>111</height>
+     <x>30</x>
+     <y>390</y>
+     <width>261</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="html">
