--- a/Lab_2/Refactored/end.ui
+++ b/Lab_2/Refactored/end.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>550</width>
-    <height>550</height>
+    <width>320</width>
+    <height>340</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>320</width>
+    <height>340</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>550</width>
-    <height>550</height>
+    <width>320</width>
+    <height>340</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>120</y>
+     <x>30</x>
+     <y>30</y>
      <width>261</width>
      <height>121</height>
     </rect>
@@ -498,8 +498,8 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>240</y>
+     <x>30</x>
+     <y>150</y>
      <width>261</width>
      <height>171</height>
     </rect>
@@ -507,6 +507,12 @@
    <layout class="QVBoxLayout" name="verticalLayout_buttons">
     <item>
      <widget class="QPushButton" name="pushButton_levels">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
        <string>Levels</string>
       </property>
@@ -514,15 +520,27 @@
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_forPleasure">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
-       <string>Play for pleasure</string>
+       <string>Play for Pleasure</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_exit">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
-       <string>exit</string>
+       <string>EXIT</string>
       </property>
      </widget>
     </item>
