--- a/Lab_2/Refactored/settings.ui
+++ b/Lab_2/Refactored/settings.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>300</height>
+    <width>270</width>
+    <height>240</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>300</width>
-    <height>300</height>
+    <width>270</width>
+    <height>240</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>300</width>
-    <height>300</height>
+    <width>270</width>
+    <height>240</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>60</y>
+     <x>30</x>
+     <y>30</y>
      <width>211</width>
      <height>181</height>
     </rect>
@@ -42,6 +42,12 @@
       </item>
       <item>
        <widget class="QLabel" name="label_score">
+        <property name="font">
+         <font>
+          <pointsize>16</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -51,15 +57,27 @@
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_continue">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
-       <string>continue</string>
+       <string>Continue</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_goBack">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>40</height>
+       </size>
+      </property>
       <property name="text">
-       <string>go back to levels</string>
+       <string>Go Back to Levels</string>
       </property>
      </widget>
     </item>
