--- a/Lab_2/Refactored/puzzle.ui
+++ b/Lab_2/Refactored/puzzle.ui
@@ -55,19 +55,6 @@
     </property>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton_settings">
-   <property name="geometry">
-    <rect>
-     <x>780</x>
-     <y>30</y>
-     <width>121</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Settings</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButton_toEnd">
    <property name="geometry">
     <rect>
@@ -97,10 +84,10 @@
   <widget class="QLabel" name="label_congratulations">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>30</y>
-     <width>361</width>
-     <height>111</height>
+     <x>250</x>
+     <y>150</y>
+     <width>551</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
@@ -140,6 +127,57 @@
    </property>
    <property name="text">
     <string>&gt;</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>30</y>
+     <width>211</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_score">
+      <item>
+       <layout class="QGridLayout" name="gridLayout_star"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_score">
+        <property name="font">
+         <font>
+          <pointsize>16</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QPushButton" name="pushButton_goBack">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>30</y>
+     <width>121</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>40</height>
+    </size>
+   </property>
+   <property name="text">
+    <string>Go Back to Levels</string>
    </property>
   </widget>
  </widget>
