--- a/Lab_2/Refactored/levels.ui
+++ b/Lab_2/Refactored/levels.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>330</width>
-    <height>380</height>
+    <height>430</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>330</width>
-    <height>380</height>
+    <height>430</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>330</width>
-    <height>380</height>
+    <height>430</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -29,9 +29,9 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>30</y>
+     <y>70</y>
      <width>276</width>
-     <height>321</height>
+     <height>331</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -82,7 +82,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>2 Level</string>
+       <string>2 Level (Available at 10 Stars)</string>
       </property>
      </widget>
     </item>
@@ -123,7 +123,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>3 Level</string>
+       <string>3 Level (Available at 25 Stars)</string>
       </property>
      </widget>
     </item>
@@ -164,7 +164,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>4 Level</string>
+       <string>4 Level (Available at 45 Stars)</string>
       </property>
      </widget>
     </item>
@@ -205,7 +205,7 @@
        <bool>false</bool>
       </property>
       <property name="text">
-       <string>5 Level</string>
+       <string>5 Level (Available at 100 Stars)</string>
       </property>
      </widget>
     </item>
@@ -264,6 +264,46 @@
        </widget>
       </item>
      </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>30</y>
+     <width>271</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <layout class="QGridLayout" name="gridLayout_label"/>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_score">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
